--- a/style.css
+++ b/style.css
@@ -1,4 +1,77 @@
+@import url("https://fonts.googleapis.com/css2?family=Azeret+Mono:ital,wght@0,100..900;1,100..900&display=swap");
+
 * {
   margin: 0;
   padding: 0;
+  font-family: "Azeret Mono", monospace;
+}
+
+.section-banner {
+  background: url(./Assets/images/Hero-bg.png) no-repeat center center;
+  background-size: cover;
+  position: fixed;
+  width: 100%;
+  height: 100%;
+  top: 131px;
+}
+
+.banner-items {
+  display: flex;
+  flex-direction: column;
+  justify-content: flex-start;
+  align-items: center;
+  padding: 0;
+  position: absolute;
+  width: 998px;
+  height: 582px;
+  left: 50%;
+  transform: translateX(-50%);
+  top: 157px;
+}
+
+.banner-tittle {
+  position: static;
+  width: 998px;
+  height: 136px;
+  display: flex;
+  flex-direction: column;
+  justify-content: flex-start;
+  align-items: center;
+  padding: 0;
+  color: rgb(13, 19, 33);
+  font-family: "Azeret Mono", monospace;
+  font-size: 48px;
+  font-weight: 800;
+  line-height: 68px;
+  letter-spacing: 0%;
+  text-align: center;
+  margin: 24px 0;
+}
+
+.banner-paragraph {
+  position: static;
+  width: 852px;
+  height: 52px;
+  padding: 0;
+  opacity: 0.7;
+  color: rgb(13, 19, 33);
+  font-family: "Azeret Mono", monospace;
+  font-size: 16px;
+  font-weight: 400;
+  line-height: 26px;
+  letter-spacing: 0%;
+  text-align: center;
+  margin: 24px 0;
+}
+
+.button-primary {
+  padding: 21px 24px;
+  border-radius: 8px;
+  background: rgb(13, 19, 33);
+  color: rgb(255, 255, 255);
+  font-size: 20px;
+  font-weight: 600;
+  line-height: 23px;
+  letter-spacing: 0%;
+  text-align: center;
 }
